styles.css
/* ... */
.footMsg {
    position: absolute;
    color: black;
    font-size: 12px;
    top: 83%;
    left: 26%;
    text-align: center;
}

.popupMsg {
    position: relative;
    margin-right: 80%;


    font-family: Muli;
    font-style: normal;
    font-weight: 600;
    font-size: 28px;
    line-height: 60px;

    color: #FFFFFF;
}

.closeBtn {
    position: relative;
    left: 94%;
    bottom: 87%;
    width: 10px;
    height: 10px;
}

.logoPopup {
    display: block;
    margin-top: 95%;
    margin-left: 45px;
}

/*-----------------Media query-----------------*/

@media (max-width: 420px) {

    /*Primeiro, removendo os estilos que não aparecem*/

    .youtube {
        display: none;
    }

    .mulherLampada {
        display: none;
    }
    
    .mulheres {
        display: none;
    }

    .destaque_direito {
        display: none;
    }

    .faltamApenas {
        display: none;
    }

    /* Estilos no mobile */

    /* Estilos do cabeçalho */
    .cabecalho {
        width: 100vw;
    }

    .destaque_texto {
        display: block;
        position: relative;
        width: 100%;

        color: white !important;
        left: 45px !important;

        font-size: 35px !important;
    }

    .destaque_subTexto {
        display: block;
        position: absolute;
        width: 100vw;

        color: white !important;
        left: 2px !important;
        text-align: center;

        font-size: 20px !important;
    }

    .destaque_data {
        display: block;
        position: absolute;
        width: 100vw;
        text-align: center;

        color: white !important;
        left: 2px !important;

        font-size: 20px !important;
    }

    .contagem {
        position: relative;
        top: -30%;
        right: 51%;
    }

    .btn-garantir {
        position: absolute;
        top: 94% !important;
        left: 40px;
    }

    .navbar-logo {
        position: relative;
        left: 35px;
        top: 30px;
    }
}

